fix title margins on options page. AG-35798
Squashed commit of the following:

commit ea3439a881293fc35ea36c1276cf523ade8beab9
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Sep 23 21:34:35 2024 +0300

    fix title margins on options page

--- a/Extension/src/pages/options/styles/common.pcss
+++ b/Extension/src/pages/options/styles/common.pcss
@@ -263,6 +263,7 @@ label.checkbox-label {
 
     &--sub {
         font-size: 20px;
+        padding-top: 32px;
     }
 }
 
@@ -292,8 +293,6 @@ label.checkbox-label {
 }
 
 .settings__group {
-    margin-bottom: 16px;
-
     &--disabled {
         opacity: 0.5;
         pointer-events: none;
